# Project-DevForge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.full.yml  docker-compose.yml  entity_relationship_diagram.mmd  pyproject.toml  system_context_diagram.mmd  todo_app_entity_relationship.mmd  todo_app_system_context.mmd
agents/architecture/: spec.yaml
agents/backend_engineer/: spec.yaml
agents/chief_orchestrator/: spec.yaml
agents/code_reviewer/: spec.yaml
agents/coder/: spec.yaml
agents/contract_writer/: spec.yaml
agents/critic/: spec.yaml
agents/database_engineer/: spec.yaml
agents/debug_agent/: spec.yaml
agents/dependency_manager/: spec.yaml
agents/deployment_engineer/: __init__.py  hooks.py  spec.yaml
agents/devops_engineer/: spec.yaml
agents/documentation_agent/: spec.yaml
agents/echo/: spec.yaml
agents/frontend_engineer/: spec.yaml
agents/gke_monitor/: __init__.py  hooks.py  spec.yaml
agents/human_liaison/: spec.yaml
agents/integration_engineer/: spec.yaml
agents/iteration/: spec.yaml
agents/live_test/: spec.yaml
agents/market_research/: spec.yaml
api/: server.py
built/email_validator_project/: .env.example  Dockerfile  pyproject.toml  requirements.txt
built/email_validator_project/app/: config.py  email_validator.py  main.py
built/email_validator_project/migrations/: env.py
built/email_validator_project/tests/: conftest.py  test_email_validator.py
cli/: auth.py  auth_config.py  main.py  scaffold.py
configs/: defaults.yaml  loader.py  scaling.yaml  schema.py  secret_manifest.yaml
coordination/: bus.py  orchestrator.py  safety.py  subswarm.py  task_graph.py  task_queue.py  worker.py
core/: agent.py  exceptions.py  message.py  registry.py  task.py
deploy/: README.md
docs/: architecture.md  deployment.md  how-to-add-a-tool.md  how-to-add-an-agent.md  keda-architecture.md
memory/: artifacts.py  base.py  blackboard.py  longterm.py  scratchpad.py
obs/: app.py
observability/: cost.py  logutil.py  replay.py  tracing.py
providers/: base.py
schemas/: completion_signal.json  memory_keys.yaml  task_envelope.json
scripts/: deploy_cloud_run.sh
swarm_output/: entity_relationship.mmd  pyproject.toml  system_context.mmd
swarm_output/tests/: test_cli.py  test_models.py  test_storage.py
swarm_output/todo/: __init__.py  __main__.py  cli.py  models.py  storage.py
tests/: conftest.py
tools/: base.py
(+223 files in other folders)
