[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "core", "agents", "tools", "providers", "memory",
  "coordination", "observability", "cli", "api", "configs",
]

[project]
name = "swarm"
version = "0.1.0"
description = "A general-purpose, extensible LLM agent swarm backed by Groq"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "groq>=0.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.1",
  "click>=8.1",
  "rich>=13.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "tenacity>=8.3",
  "python-dotenv>=1.0",
  "jsonschema>=4.22",
  "anyio>=4.4",
  "networkx>=3.3",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "chromadb>=0.5",
  "duckduckgo-search>=6.1",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "python-multipart>=0.0.9",
  "websockets>=12.0",
  "aiofiles>=23.2",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
obs   = ["streamlit>=1.35", "pandas>=2.0"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
swarm = "cli.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that expect a fuller environment (optional API keys, etc.)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
