[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "todo-cli"
version = "1.0.0"
description = "A simple CLI todo app with JSON file storage"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
todo = "todo.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []