[project]
name = "email_validator"
version = "0.1.0"

[project.dependencies]
fastapi = ">=0.110"
uvicorn = {extras = ["standard"], version = ">=0.27"}
sqlalchemy = ">=2.0"
alembic = ">=1.13"
structlog = ">=24.0"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]
